--- a/equilibrioapp/src/main/resources/application.yml
+++ b/equilibrioapp/src/main/resources/application.yml
@@ -1,1 +1,19 @@
-spring.application.name=equilibrioapp
+spring:
+  datasource:
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: gustavo
+    password: ""
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
